# mcts-tic-tac-toe

./: .gitignore  README.md  board.py  rendering.py
cpp/: .clang-format  .gitignore  CMakeLists.txt  GameState.cpp  Node.cpp  main.cpp  mcts.cpp
cpp/include/: GameState.h  Node.h  mcts.h
cpp/src/: GameState.cpp  Node.cpp  main.cpp  mcts.cpp
python/: Game.py  comment.py  rendering.py  test_mcts.py
